--- a/package.json
+++ b/package.json
@@ -5,24 +5,20 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@xstate/react": "^0.8.1",
-    "gatsby": "^2.24.50",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-manifest": "^2.4.24",
-    "gatsby-plugin-offline": "^3.2.24",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.28",
-    "gatsby-source-filesystem": "^2.3.25",
-    "gatsby-transformer-sharp": "^2.5.13",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0",
-    "rxjs": "^6.6.2",
-    "xstate": "^4.13.0"
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.1",
+    "gatsby": "^5.10.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^5.10.0",
+    "gatsby-plugin-react-helmet": "^6.10.0",
+    "gatsby-source-filesystem": "^5.10.0",
+    "gatsby-transformer-sharp": "^5.10.0",
+    "react": "18"
   },
   "devDependencies": {
-    "prettier": "2.1.0"
+    "prettier": "2.8.8"
   },
   "keywords": [
     "gatsby"
