--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gatsby-plugin-react-helmet": "^6.10.0",
     "gatsby-source-filesystem": "^5.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
-    "react": "18"
+    "react": "18",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "prettier": "2.8.8"
